Added custom data structure package for priority queue

--- a/JavaScript/leetcode75/package.json
+++ b/JavaScript/leetcode75/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@datastructures-js/priority-queue": "6.3.0",
     "@jest/types": "29.5.0",
     "jest": "29.5.0"
   }
