--- a/JavaScript/leetcode75/package.json
+++ b/JavaScript/leetcode75/package.json
@@ -12,5 +12,8 @@
     "@datastructures-js/priority-queue": "6.3.0",
     "@jest/types": "29.5.0",
     "jest": "29.5.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.2"
   }
 }
